try to fix select on mobile browser

--- a/assets/styles.css
+++ b/assets/styles.css
@@ -114,6 +114,19 @@ Card question and answer css
   padding-top: 28px;
   position: relative;
   cursor: pointer;
+  user-select: none;
+}
+
+.qa-li:active {
+  background-color: transparent;
+}
+
+.qa-li:focus {
+  background-color: transparent;
+}
+
+.qa-li:hover {
+  background-color: transparent;
 }
 
 .questions-list > li:last-child {
